[gd_scene load_steps=7 format=3 uid="uid://gm0y1d4nakn0"]

[ext_resource type="PackedScene" uid="uid://m8y8ofttbvbm" path="res://Scenes/Trains/train_vehicle.tscn" id="1_f63uf"]
[ext_resource type="Texture2D" uid="uid://51xaf4gskb4j" path="res://Assets/Railroad/train_engine.png" id="2_640cv"]
[ext_resource type="Script" path="res://Scenes/Trains/train_engine.gd" id="3_i5xj2"]

[sub_resource type="Curve" id="Curve_130vw"]
_data = [Vector2(0, 1), 0.0, 1.4, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_3adap"]
curve = SubResource("Curve_130vw")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_bsqn5"]
particle_flag_disable_z = true
spread = 15.0
initial_velocity_min = 46.0
initial_velocity_max = 69.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
gravity = Vector3(0, 0, 0)
scale_min = 8.0
scale_max = 12.0
scale_curve = SubResource("CurveTexture_3adap")

[node name="TrainEngine" instance=ExtResource("1_f63uf")]
texture = ExtResource("2_640cv")
script = ExtResource("3_i5xj2")
max_force = 1000.0
break_power = 12.0
train_throttle = 0.0
train_break = 0.0
train_direction = 0.0

[node name="ControlButton" type="Button" parent="." index="2"]
unique_name_in_owner = true
anchors_preset = -1
anchor_top = 0.166667
anchor_right = 1.0
anchor_bottom = 0.833333
offset_left = -8.0
offset_top = -12.0
offset_right = -8.0
offset_bottom = -12.0
focus_mode = 0
mouse_default_cursor_shape = 2
metadata/_edit_use_anchors_ = true

[node name="UI" type="CanvasLayer" parent="." index="3"]
visible = false

[node name="TrainControlPanel" type="PanelContainer" parent="UI" index="0"]
anchors_preset = -1
anchor_top = 0.777778
anchor_right = 1.0
anchor_bottom = 1.0
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="UI/TrainControlPanel" index="0"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="UI/TrainControlPanel/MarginContainer" index="0"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/TrainControlPanel/MarginContainer/HBoxContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Direction" type="VSlider" parent="UI/TrainControlPanel/MarginContainer/HBoxContainer/HBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
mouse_default_cursor_shape = 9
min_value = -1.0
max_value = 1.0
step = 2.0
value = 1.0

[node name="Break" type="VSlider" parent="UI/TrainControlPanel/MarginContainer/HBoxContainer/HBoxContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
mouse_default_cursor_shape = 9
max_value = 1.0
step = 0.1
value = 1.0

[node name="Throttle" type="VSlider" parent="UI/TrainControlPanel/MarginContainer/HBoxContainer/HBoxContainer" index="2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
mouse_default_cursor_shape = 9
max_value = 1.0
step = 0.1

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/TrainControlPanel/MarginContainer/HBoxContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="Camera2D" type="Camera2D" parent="." index="4"]
enabled = false
zoom = Vector2(0.8, 0.8)

[node name="SmokeEmitter" type="GPUParticles2D" parent="." index="5"]
z_index = 1
amount = 24
process_material = SubResource("ParticleProcessMaterial_bsqn5")

[connection signal="pressed" from="ControlButton" to="." method="_on_control_button_pressed"]
